--- a/Farma-Life Site/css/estilo.css
+++ b/Farma-Life Site/css/estilo.css
@@ -8,7 +8,7 @@
 
 
 body{
-    background-image: linear-gradient(to left, rgb(255, 255, 255), rgb(49, 0, 128));
+    background-image: linear-gradient(to right, rgb(255, 255, 255), rgb(49, 0, 128));
 }
 
 
@@ -79,18 +79,113 @@ header{
 
  } 
 #borda1{
-    background-color: red;
+    background-color: rgb(67, 218, 232);
+    
 }
 
 #borda2{
-    background-color: yellow;
+    background-color: rgb(49, 187, 125);
 }
+
+
+
+.content{
+    margin-top: 150px;
+    height: 520px;
+    width: 923px;
+    border-radius: 20px;
+    overflow: hidden;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -30%);
+    
+}
+
+.navigation{
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translate(-50%);
+    display: flex;
+}
+  
+.bar {
+    width: 70px;
+    height: 17px;
+    border: 2px solid rgb(255, 255, 255);
+    margin: 6px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: .9s;
+}
+  
+.bar:hover {
+    background-color: rgb(255, 255, 255);
+}
+
+input {
+    display: none;
+}
+
+.slides {
+    display: flex;
+    width: 500%;
+    height: 100%;
+    
+}
+
+.slide {
+    width: 20%;
+    transition: .6s;
+}
+
+.slide img{
+    width: 100%;
+    height: 100%;
+}
+
+#slide1:checked ~ .s1{
+  margin-left: 0;  
+}
+
+#slide2:checked ~ .s1{
+   margin-left: -20%; 
+}
+
+#slide3:checked ~ .s1 {
+    margin-left: -40%;
+}
+
+#slide4:checked ~ .s1 {
+    margin-left: -60%;
+}
+
+#slide5:checked ~ .s1 {
+    margin-left: -80%;
+}
+
+
+
+.chatbot{
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    bottom: 40px;
+    right: 25px;
+    text-align: center;
+    z-index: 1000;
+    border-radius: 150px;
+}
+
+
+
 
   .footer {
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
     position: absolute;
-    top: 100%;
+    top: 150%;
     left: 0px;
     width: 100%;
     height: 160px;
